--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Weather App</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <div class="container">
+        <h1 class="title">Weather App</h1>
+        <div class="search-bar">
+          <form>
+            <input
+              type="text"
+              placeholder="Find A City"
+              required
+              minlength="2"
+              maxlength="50"
+            />
+            <span class="error"></span>
+            <button type="submit">Search</button>
+          </form>
+        </div>
+        <div class="weather-info">
+          <div class="general-info">
+            <h3 class="condition"></h3>
+            <h2 class="location"></h2>
+          </div>
+          <div class="specific-info">
+            <div class="left">
+              <h4 class="temperature"></h4>
+            </div>
+            <div class="right">
+              <h5 class="feels-like"></h5>
+              <h5 class="wind"></h5>
+              <h5 class="humidity"></h5>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <script src="index.js"></script>
+  </body>
 </html>
